--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HackGT 12</title>
+  <meta name="description"
+    content="This year, from September 26-28, we're hosting Georgia Tech's annual 36-hour hackathon, with over 1,500+ hackers from around the world.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <link rel="canonical" href="https://hack.gt" />
+  <meta property="og:title" content="HackGT 12" />
+  <meta property="og:description"
+    content="This year, from September 26-28, we're hosting Georgia Tech's annual 36-hour hackathon, with over 1,500+ hackers from around the world." />
+  <meta property="og:image" content="https://hack.gt/home.png" />
+  <meta property="og:url" content="https://hack.gt" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
