--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="HackGT 12" />
   <meta property="og:description"
     content="This year, from September 26-28, we're hosting Georgia Tech's annual 36-hour hackathon, with over 1,500+ hackers from around the world." />
-  <meta property="og:image" content="https://hack.gt/home.png" />
+  <meta property="og:image" content="https://hack.gt/home.webp" />
   <meta property="og:url" content="https://hack.gt" />
   <meta property="og:type" content="website" />
 </head>
