Add SEO components and structured data for HackGT 12

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/favicon.ico">
+  
   <title>HackGT 12</title>
-  <meta name="description"
-    content="This year, from September 26-28, we're hosting Georgia Tech's annual 36-hour hackathon, with over 1,500+ hackers from around the world.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
+  <meta name="description" content="Georgia Tech's annual 36-hour hackathon with 1,500+ hackers from around the world." />
+  
+  <!-- Base Open Graph tags -->
+  <meta property="og:site_name" content="HackGT 12" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Base canonical URL -->
   <link rel="canonical" href="https://hack.gt" />
-  <meta property="og:title" content="HackGT 12" />
-  <meta property="og:description"
-    content="This year, from September 26-28, we're hosting Georgia Tech's annual 36-hour hackathon, with over 1,500+ hackers from around the world." />
-  <meta property="og:image" content="https://hack.gt/home.webp" />
-  <meta property="og:url" content="https://hack.gt" />
-  <meta property="og:type" content="website" />
 </head>
 
 <body>
